--- a/index.html
+++ b/index.html
@@ -243,13 +243,35 @@
         <div class="projects__container" id="project-list">
 
           <div class="projects__item">
-            <img src="assets/projects/project 13.png" alt="project 8">
+            <img src="assets/projects/project 13.png" alt="project 10">
             <a class="projects__show" target="_blank" href="https://roti-daeng.ahmadmuflih.in/">
               <iconify-icon icon="mdi:eye"></iconify-icon>
             </a>
             <div style="padding:10px;">
               <h4 style="margin-top:15px">POS & Distribusi (Roti & Brownies Daeng Makassar)</h4>
               <p style="font-size:14px;text-align: justify;">Sistem distribusi produk dan penjualan Roti & Brownies Daeng Makassar, dilengkapi juga dengan sistem absensi karyawan</p>
+            </div>
+          </div>
+
+          <div class="projects__item">
+            <img src="assets/projects/project 15.png" alt="project 9">
+            <a class="projects__show" target="_blank" href="https://kehutanan.ahmadmuflih.in/">
+              <iconify-icon icon="mdi:eye"></iconify-icon>
+            </a>
+            <div style="padding:10px;">
+              <h4 style="margin-top:15px">Sistem Informasi Kawasa Hutan</h4>
+              <p style="font-size:14px;text-align: justify;">Sistem pemetaan kawasan hutan KPH Kulawi Sulawesi Tengah menggunakan GIS Google Maps</p>
+            </div>
+          </div>
+
+          <div class="projects__item">
+            <img src="assets/projects/project 14.png" alt="project 8">
+            <a class="projects__show" target="_blank" href="https://kemenkes-kalibrasi.ahmadmuflih.in/">
+              <iconify-icon icon="mdi:eye"></iconify-icon>
+            </a>
+            <div style="padding:10px;">
+              <h4 style="margin-top:15px">Sistem Verifikasi Alat Kesehatan (Kemenkes Makassar)</h4>
+              <p style="font-size:14px;text-align: justify;">Sistem verifikasi kelayakan secara bertahap alat kesehatan untuk setiap instansi kesehatan</p>
             </div>
           </div>
           
