--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </a>
             <div style="padding:10px;">
               <h4 style="margin-top:15px">Sistem Informasi Kawasa Hutan</h4>
-              <p style="font-size:14px;text-align: justify;">Sistem pemetaan kawasan hutan KPH Kulawi Sulawesi Tengah menggunakan GIS Google Maps</p>
+              <p style="font-size:14px;text-align: justify;">Sistem informasi Kawasan Hutan berfungsi sebagai sumber informasi dan publikasi, updating data, monitoring dan Evaluasi kinerja UPT. KPH Kulawi sebagai dasar penentuan kebijakan dan peningkatan pelayanan publik di bidang Kehutanan</p>
             </div>
           </div>
 
