--- a/index.html
+++ b/index.html
@@ -243,6 +243,17 @@
         <div class="projects__container" id="project-list">
 
           <div class="projects__item">
+            <img src="assets/projects/project 16.png" alt="project 11">
+            <a class="projects__show" target="_blank" href="https://ppdb.education-maros.com/">
+              <iconify-icon icon="mdi:eye"></iconify-icon>
+            </a>
+            <div style="padding:10px;">
+              <h4 style="margin-top:15px">PPDB SD & SMP Kab. Maros SulSel</h4>
+              <p style="font-size:14px;text-align: justify;">Sistem Pendaftaran Calon Siswa SD & SMP Sekabupaten Maros, Pada Sistem Tersebut Sekolah Seleksi Pendaftar di Sekolah Masing-Masing Sesuai Dengan Kuota Yang Diberikan</p>
+            </div>
+          </div>
+
+          <div class="projects__item">
             <img src="assets/projects/project 13.png" alt="project 10">
             <a class="projects__show" target="_blank" href="https://roti-daeng.ahmadmuflih.in/">
               <iconify-icon icon="mdi:eye"></iconify-icon>
@@ -259,7 +270,7 @@
               <iconify-icon icon="mdi:eye"></iconify-icon>
             </a>
             <div style="padding:10px;">
-              <h4 style="margin-top:15px">Sistem Informasi Kawasa Hutan</h4>
+              <h4 style="margin-top:15px">Sistem Informasi Kawasan Hutan</h4>
               <p style="font-size:14px;text-align: justify;">Sistem informasi Kawasan Hutan berfungsi sebagai sumber informasi dan publikasi, updating data, monitoring dan Evaluasi kinerja UPT. KPH Kulawi sebagai dasar penentuan kebijakan dan peningkatan pelayanan publik di bidang Kehutanan</p>
             </div>
           </div>
