--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
             <div class="about__identity-item">
               <h4>Job</h4>
-              <p>Engineer</p>
+              <p>Lead Dev, Web Dev</p>
             </div>
             <div class="about__identity-item">
               <h4>From</h4>
